# static-site-deployer

./: .cz.toml  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  release.sh  requirements.txt  updater.py
.github/workflows/: nitpick.yml  pre-commit-update.yml  pre-commit.yml  python-tests.yml
src/static_site_deployer/: __init__.py  __main__.py
src/static_site_deployer/cli/: __init__.py
tests/: __init__.py  test_cmd.py
