[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "static-site-deployer"
dynamic = ["version"]
description = ""
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{name = "linuxdaemon", email = "linuxdaemon.irc@gmail.com"}]
keywords = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "requests==2.32.5",
    "pygithub==2.8.1",
    "typer==0.21.1",
    "typing_extensions",
]

[project.urls]
Documentation = "https://github.com/snoonetIRC/static-site-deployer#readme"
Issues = "https://github.com/snoonetIRC/static-site-deployer/issues"
Source = "https://github.com/snoonetIRC/static-site-deployer"

[project.scripts]
static-site-deployer = "static_site_deployer.cli:cli"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/static_site_deployer/_version.py"

[tool.hatch.envs.default]
dependencies = [
    "coverage[toml]==7.13.1",
    "pytest==9.0.2",
    "pre-commit==4.5.1",
    "mypy==1.19.1",
    "types-requests==2.32.4.20260107",
]
post-install-commands = ["hatch run pre-commit:install"]

[tool.hatch.envs.pre-commit]
post-install-commands = []

[tool.hatch.envs.pre-commit.scripts]
run = ["pre-commit run {args:--all}"]
install = ["pre-commit install {args:-f}"]

[tool.hatch.envs.hatch-test]
default-args = ["tests", "src"]
extra-args = ["-vv", "--junitxml=junit.xml"]
extra-dependencies = [
    "coverage[toml]==7.13.1",
    "pytest==9.0.2",
]
post-install-commands = []

[tool.hatch.envs.hatch-test.scripts]
run = "pytest{env:HATCH_TEST_ARGS:} {args}"
run-cov = "coverage run -m pytest{env:HATCH_TEST_ARGS:} {args}"
cov-combine = "coverage combine"
cov-report = ["coverage report --show-missing --skip-covered", "coverage xml"]

[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.14", "3.13", "3.12", "3.11", "3.10"]

[tool.hatch.envs.types]
post-install-commands = []

[tool.hatch.envs.types.scripts]
check = "mypy {args:src tests}"

[tool.isort]
profile = "black"
line_length = 80
include_trailing_comma = true
use_parentheses = true
float_to_top = true

[tool.black]
line-length = 80
target-version = ["py310"]
include = '\.pyi?$'

[tool.ruff]
line-length = 80
target-version = 'py310'

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"
skip-magic-trailing-comma = true

[tool.ruff.lint]
extend-safe-fixes = [
    "EM101",
    "UP",
    "RUF005",
    "EM102",
    "EM103",
    "FLY002",
    "TC001",
    "TC002",
    "TRY400",
    "SIM117",
    "SIM108",
    "ANN201",
    "D415",
    "D200",
]
ignore = [
    "TRY003", # TODO(aspen): Switch to custom exceptions
    "PLW1641", # TODO(aspen): Make classes immutable, add __hash__ methods
    "COM812", # Conflicts with formatter
    "ISC001", # Conflicts with formatter
    "EXE002", # pre-commit does it better, works with SMB shares
]
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = [
    "PLR2004", # Allow "magic values" in tests -aspen
    "S101", # Allow asserts in tests
    "SIM201", # We need to test weird comparison operators
    "SIM202", # We need to test weird comparison operstors
    "SIM300", # We need to test both forward and reverse comparisons
    "FBT001", # Boolean parameters are fine for test cases
]

[tool.ruff.lint.pycodestyle]
max-line-length = 100

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.flynt]
aggressive = true
transform-joins = true
transform-concats = true
line-length = 120

[tool.mypy]
namespace_packages = true
python_version = "3.10"
warn_unused_configs = true
strict = true
strict_bytes = false
strict_optional = true
check_untyped_defs = true
show_error_codes = true
warn_unused_ignores = true
no_implicit_reexport = true
warn_redundant_casts = true
strict_equality = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_untyped_decorators = true
extra_checks = true
warn_unreachable = true
warn_return_any = true
warn_no_return = true
enable_error_code = [
    "redundant-self",
    "redundant-expr",
    "possibly-undefined",
    "truthy-bool",
    "truthy-iterable",
    "ignore-without-code",
    "deprecated",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = ["--doctest-modules"]
testpaths = ["src", "tests"]
filterwarnings = ["error"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.coverage.run]
branch = true
relative_files = true

[tool.nitpick]
style = ["gh://TotallyNotRobots/nitpick/lib-style-3.10.toml"]

[tool.check-spdx-header]
headers = [
    "2019-present Snoonet",
]

[tool.autoflake]
remove-all-unused-imports = true
in-place = true
